changes to the staging config

--- a/configuration/staging/server.ini
+++ b/configuration/staging/server.ini
@@ -1,1 +1,7 @@
 ; Configuration for the Server Component of the SwiftGateway
+[logging]
+filename = /home/swiftriver/riverid/logs/server/baselog.csv
+
+[gatewaycredentials]
+oauth_consumer_key = 451ee6b4d98f800700ff6af49c7fa3478783ade4177e1dc5c84796aa
+oauth_secret = f7fcdeef3a5a0989d31217589599fdd21f1f54acb78571dd1173d913
