--- a/configuration/staging/server.ini
+++ b/configuration/staging/server.ini
@@ -3,5 +3,5 @@
 filename = /home/swiftriver/riverid/logs/server/baselog.csv
 
 [gatewaycredentials]
-oauth_consumer_key = 451ee6b4d98f800700ff6af49c7fa3478783ade4177e1dc5c84796aa
-oauth_secret = f7fcdeef3a5a0989d31217589599fdd21f1f54acb78571dd1173d913
+oauth_consumer_key = 2vTKnGSl76BzBb22NuUN
+oauth_secret = 5B6eGUOTLQWS0r0g1E9J
