--- a/configuration/development/server.ini
+++ b/configuration/development/server.ini
@@ -1,6 +1,6 @@
 ; Configuration for the Server Component of the SwiftGateway
 [logging]
-filename = /home/matt/code/swiftriver/riverid/logs/server/baselog.csv
+filename = /tmp/baselog.csv
 
 [gatewaycredentials]
 oauth_consumer_key = 451ee6b4d98f800700ff6af49c7fa3478783ade4177e1dc5c84796aa
