Separate static from api.

--- a/config/apache-api.conf
+++ b/config/apache-api.conf
@@ -1,5 +1,5 @@
-# RiverID Apache Configuration
-# ============================
+# RiverID API Apache Configuration
+# ================================
 #
 # This file is part of RiverID.
 #
@@ -17,8 +17,6 @@
 # along with RiverID.  If not, see <http://www.gnu.org/licenses/>.
 
 <VirtualHost *:80>
- Alias /static/ /var/www/riverid/static/
- AliasMatch ^/$ /var/www/riverid/static/index.html
  WSGIDaemonProcess riverid user=riverid group=riverid threads=5
  WSGIScriptAlias / /var/www/riverid/api/riverid.py
 </VirtualHost>
