--- a/config/firewall-api.conf
+++ b/config/firewall-api.conf
@@ -1,5 +1,5 @@
-# RiverID Application Firewall Configuration
-# ==========================================
+# RiverID API Firewall Configuration
+# ==================================
 #
 # This file is part of RiverID.
 #
