Combined api and static HTML.

--- a/config/apache-app.conf
+++ b/config/apache-app.conf
@@ -17,6 +17,7 @@
 # along with RiverID.  If not, see <http://www.gnu.org/licenses/>.
 
 <VirtualHost *:80>
+ AliasMatch ^/$ /var/www/riverid/frontend/index.html
  WSGIDaemonProcess riverid user=riverid group=riverid threads=5
  WSGIScriptAlias / /var/www/riverid/api/riverid.py
 </VirtualHost>
