--- a/config/nginx-lb.conf
+++ b/config/nginx-lb.conf
@@ -14,8 +14,8 @@ server {
  listen 443;
  server_name localhost;
  ssl on;
- ssl_certificate ssl/nixcraft.in.crt;
- ssl_certificate_key ssl/nixcraft.in.key;
+ ssl_certificate ssl/riverid.in.crt;
+ ssl_certificate_key ssl/riverid.in.key;
  ssl_session_timeout 5m;
  ssl_protocols SSLv3 TLSv1;
  ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
