Cleaned up LB config

--- a/config/nginx-lb.conf
+++ b/config/nginx-lb.conf
@@ -1,18 +1,27 @@
 upstream riverid {
- server www.ushahidi.com:80;
+ # Application Cluster Nodes
+ server 10.0.0.1:80;
+ server 10.0.0.2:80;
+ server 10.0.0.3:80;
 }
+
 server {
+ # Application Cluster Hostname
+ server_name id.crowdmap.com;
+
  listen 80;
  listen [::]:80 default ipv6only=on;
- server_name 50.56.85.134;
- access_log /var/log/nginx/localhost.access.log;
+
  location / {
   rewrite ^(.*) https://$server_name$1 permanent;
  }
 }
+
 server {
- listen 443;
  server_name localhost;
+
+ listen 443;
+
  ssl on;
  ssl_certificate ssl/riverid.in.crt;
  ssl_certificate_key ssl/riverid.in.key;
@@ -20,6 +29,7 @@ server {
  ssl_protocols SSLv3 TLSv1;
  ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
  ssl_prefer_server_ciphers on;
+
  location / {
   proxy_pass http://riverid;
  }
