--- a/config/nginx-lb.conf
+++ b/config/nginx-lb.conf
@@ -7,7 +7,7 @@ upstream riverid {
 
 server {
  # Application Cluster Hostname
- server_name id.crowdmap.com;
+ server_name crowdmapid.com;
 
  listen 80;
  listen [::]:80 default ipv6only=on;
